--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,31 +1,20 @@
-<h1>Listing listings</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Price</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @listings.each do |listing| %>
-      <tr>
-        <td><%= listing.name %></td>
-        <td><%= listing.description %></td>
-        <td><%= listing.price %></td>
-        <td><%= link_to 'Show', listing %></td>
-        <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
-        <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="row">
+  <% @listings.each do |listing| %>
+    <div class="col-md-3">
+      <div class="thumbnail">
+        <%= image_tag listing.image.url %>
+        <div class="caption">
+          <h3><%= listing.name %></h3>
+          <p><%= number_to_currency(listing.price) %></p>
+          <%= link_to 'Show', listing, class: "btn btn-link" %>
+          <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
+          <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
 
 <br>
 
-<%= link_to 'New Listing', new_listing_path %>
+<%= link_to "New Listing", new_listing_path, class: "btn btn-link" %>
