--- a/app/views/listings/seller.html.erb
+++ b/app/views/listings/seller.html.erb
@@ -1,24 +1,33 @@
-<div class="center">
-  <div class="row">
+<table class="table table-striped table-boardered">
+  <tr>
+    <th>Image</th>
+    <th>Name</th>
+    <th>Description</th>
+    <th>Price</th>
+    <th>Action</th>
+  </tr>
+
   <% @listings.each do |listing| %>
-    <div class="col-md-3">
-      <div class="thumbnail">
-        <%= link_to image_tag(listing.image.url), listing %>
-        <div class="caption">
-          <h3><%= listing.name %></h3>
-          <p><%= number_to_currency(listing.price) %></p>
-          <p><%= "Sold by #{listing.user.name}" %></p>
-          <% if (user_signed_in?) && (current_user == listing.user) %>
-          <%= link_to 'Show', listing, class: "btn btn-link" %>
-          <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
-          <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>
-        <% end %>
-        </div>
-      </div>
-    </div>
+    <tr>
+        <td><%= image_tag listing.image.url(:thumb) %></td>
+        <td><%= listing.name %></td>
+        <td><%= listing.description %></td>
+        <td><%= number_to_currency(listing.price) %></td>
+        <td>
+          <div class="btn-group">
+          <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+            Action <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" role="menu">
+            <li><%= link_to "View", listing, class: "btn btn-link" %></li>
+            <li><%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %></li>
+            <li><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %></li>
+          </ul>
+         </div>
+        </td>
+      </tr>   
   <% end %>
-  </div>
-</div>
+</table>
 
 <br>
 
