--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,12 +1,19 @@
-<h2>Sign up</h2>
 
+
+<div class="row">
+  <div class="col-md-4 col-md-offset-4">
+    <h2>Sign Up</h2>
+         
+          
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
+ 
   <div class="form-group">
   	<%= f.label :name %>
   	<%= f.text_field :name, autofocus: true, class: "form-control" %>
   </div>
+
 
 
   <div class="form-group">
@@ -30,3 +37,6 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+</div>
+
