--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,10 +1,12 @@
-
-
 <div class="row">
   <div class="col-md-4 col-md-offset-4">
-    <h2>Sign Up</h2>
+   <div class="panel panel-default">
+      <div class="panel-heading">
+          <h2>Sign Up</h2>
+      </div>
+      
          
-          
+ <div class="panel-body">         
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
@@ -35,8 +37,11 @@
   	<%= f.submit "Sign up", class: "btn btn-primary" %>
   </div>
 <% end %>
+</div>
 
-<%= render "devise/shared/links" %>
-</div>
-</div>
+  <div class="panel-footer">
+    <%= render "devise/shared/links" %>
+  </div>
+
+
 
