--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron">
-  <h1>Farming items from around the world.</h1>
-  <h2>Discover one-of-a-kind items</h2>
+  <h2>We help farmers to optimise their post-harvest losses, by matching their excess stocks with food businesses who need it </h2>
+  <h2>Get started Today</h2>
 </div>
 
 
